Fix for RT-33091: Choice and Combo popups have extra space to the right and bottom
Reviewed by: Pavel Safrata

--- a/modules/controls/src/main/resources/com/sun/javafx/scene/control/skin/modena/modena.css
+++ b/modules/controls/src/main/resources/com/sun/javafx/scene/control/skin/modena/modena.css
@@ -371,6 +371,11 @@ is being used to size a border should also be in pixels.
     -fx-background-color: -fx-background;
 }
 
+/* Make popups transparent */
+.root.popup {
+    -fx-background-color: transparent;
+}
+
 /*******************************************************************************
  *                                                                             *
  * Common Styles                                                               *
